--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "home": "https://evgotem.github.io/TravianSpamPicker/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,7 +16,8 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "antd": "^5.13.2"
+    "antd": "^5.13.2",
+    "gh-pages": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
